--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "express": "^4.17.1",
+    "json": "^9.0.6",
     "json-server": "^0.16.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -13,10 +15,11 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-slick": "^0.27.1",
+    "server": "^1.0.29",
     "styled-components": "^5.1.1"
   },
   "scripts": {
-    "server": "node ./server.js",
+    "server": "json-server --watch db.json --port 8080",
     "dev": "concurrently \"react-scripts start\" \"npm run server\"",
     "start": "npm run server",
     "build": "react-scripts build",
